fixed button alignment

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ html {
 }
 
 #saveNPC {
-    display: none;
+    visibility: hidden;
 }
 
 .strongP {
